# superstore

./: .copier-answers.yaml  Cargo.toml  Makefile  README.md  pyproject.toml
.github/workflows/: benchmark.yaml  build.yaml  docs.yaml
docs/src/: api.md  copulas.md  distributions.md  ecommerce.md  finance.md  logs.md  retail.md  telemetry.md  temporal.md  timeseries.md  weather.md
rust/: Cargo.toml
rust/src/: ecommerce.rs  general.rs  lib.rs  parallel.rs  streaming.rs  timeseries.rs
src/: ecommerce.rs  lib.rs  timeseries.rs
superstore/: __init__.py  config.py  superstore.pyi
superstore/tests/: test_ecommerce.py  test_superstore.py
