[package]
name = "superstore_py"
version = "0.3.0"
edition = "2021"
publish = false

[lib]
name = "superstore"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
superstore = { path = "./rust", version = "*" }
pyo3 = { version = "0.27.2", features = ["abi3-py310", "extension-module", "multiple-pymethods"] }
uuid = { version = "1.0", features = ["v4"] }
rand = "0.8"
rand_distr = "0.4"
chrono = "0.4"
rayon = "1.10"
arrow = { version = "53", default-features = false, features = ["ipc"] }
nalgebra = "0.33"

[profile.release]
panic = 'abort'
lto = true

[workspace]
members = [
    "rust",
]
