[build-system]
requires = [
    "hatchling",
    "hatch-rs>=0.1.4",
]
build-backend="hatchling.build"

[project]
name = "superstore"
authors = [
    {name = "the superstore authors", email = "dev@1kbgz.com"},
]
description = "Data generation"
readme = "README.md"
license = { text = "Apache-2.0" }
version = "0.3.0"
requires-python = ">=3.10"
keywords = []

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Rust",
    "Programming Language :: Python",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
develop = [
    "asv>=0.6",
    "build",
    "bump-my-version",
    "check-manifest",
    "cibuildwheel",
    "codespell>=2.4,<2.5",
    "hatch-rs",
    "hatchling",
    "mdformat>=0.7.22,<1.1",
    "mdformat-tables>=1",
    "mypy>=1.0",
    "pytest",
    "pytest-cov",
    "ruff>=0.9,<0.15",
    "twine",
    "ty",
    "uv",
    "virtualenv",
    "wheel",
    # tests
    "pandas",
    "pandas-stubs",
    "polars",
]

[project.scripts]

[project.urls]
Repository = "https://github.com/1kbgz/superstore"
Homepage = "https://github.com/1kbgz/superstore"

[tool.bumpversion]
current_version = "0.3.0"
commit = true
tag = true
commit_args = "-s"

[[tool.bumpversion.files]]
filename = "superstore/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "Cargo.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "rust/Cargo.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[tool.check-manifest]
ignore = [
    ".copier-answers.yaml",
    "asv.conf.json",
    "Cargo.toml",
    "Cargo.lock",
    "Makefile",
    "docs/**/*",
    "rust/.config/*",
    "rust/Cargo.lock",
    "rust/README.md",
]

[tool.cibuildwheel]
build = "cp310-*"
test-command = "pytest -vvv {project}/superstore/tests"
test-extras = "develop"

[tool.cibuildwheel.linux]
before-all = """
curl https://sh.rustup.rs -sSf | sh -s -- --default-toolchain=stable --profile=minimal -y
rustup target add aarch64-unknown-linux-gnu
rustup target add x86_64-unknown-linux-gnu
rustup show
"""
environment = {PATH="$HOME/.cargo/bin:$PATH", CARGO_TERM_COLOR="always"}
skip = "*i686* *musllinux*"

[tool.cibuildwheel.macos]
environment = {PATH="$HOME/.cargo/bin:$PATH", CARGO_TERM_COLOR="always", MACOS_DEPLOYMENT_TARGET=11.0}
archs = "arm64"

[tool.cibuildwheel.windows]
environment = {PATH="$UserProfile\\.cargo\bin;$PATH", CARGO_TERM_COLOR="always"}
skip = "*win32 *arm_64"

[tool.coverage.run]
branch = true
omit = [
    "superstore/tests/integration/",
]
[tool.coverage.report]
exclude_also = [
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]
ignore_errors = true
fail_under = 50

[tool.hatch.build]
artifacts = [
    "project/*.dll",
    "project/*.dylib",
    "project/*.so",
]

[tool.hatch.build.sources]
src = "/"

[tool.hatch.build.hooks.hatch-rs]
verbose = true
module = "superstore"
path = "."

[tool.hatch.build.targets.sdist]
packages = [
    "superstore",
    "/rust",
    "/src",
]
sources = [
    ".",
]

[tool.hatch.build.targets.wheel]
packages = [
    "superstore",
]

[tool.pytest.ini_options]
addopts = [
    "-vvv",
    "--junitxml=junit.xml",
]
testpaths = "superstore/tests"

[tool.ruff]
line-length = 150

[tool.ruff.lint]
extend-select = [
    "I",
]

[tool.ruff.lint.isort]
combine-as-imports = true
default-section = "third-party"
known-first-party = [
    "superstore",
]
section-order = [
    "future",
    "standard-library",
    "third-party",
    "first-party",
    "local-folder",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    "F401",
    "F403",
]

[tool.yardang]
title = "superstore"
root = "README.md"
pages = [
    "docs/src/api.md",
]
use-autoapi = false
