[package]
name = "superstore"
version = "0.3.1"
authors = ["the superstore authors <3105306+timkpaine@users.noreply.github.com>"]
edition = "2021"
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/timkpaine/superstore"
description = ""

[lib]
name = "superstore"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
rand = "0.8"
rand_distr = "0.4"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fake = { version = "2.9", features = ["chrono"] }
petname = "2.0"
lazy_static = "1.4"
rayon = "1.10"
arrow = { version = "53", default-features = false, features = ["ipc"] }
parquet = { version = "53", default-features = false, features = ["arrow", "snap", "zstd"] }
csv = "1.3"
nalgebra = "0.33"

[profile.test.junit]
path = "junit.xml"

